//
//proto3proto2
//protobuf
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//ï¼Œprotocgo
package go_protos;

option go_package = "./go_protos";

import "txbase.proto";

message TxNameIn {
	TxBase            TxBase               =1;
	bytes             Account              =2;    //
    repeated bytes    NetIds               =3;    //
    bytes             NetIdsMerkleHash     =4;    //hash
    repeated bytes    AddrCoins            =5;    //
    bytes             AddrCoinsMerkleHash  =6;    //hash
}

message TxNameOut {
	TxBase            TxBase               = 1;
	bytes             Account              = 2;    //
}